<resources>
    <string name="app_name">IotApplication</string>
    <string name="type_your_email">Type your Email</string>
    <string name="sign_in">Sign In</string>
    <string name="type_your_ts">Type specific timestamp</string>

    <string name="home_welcome_message">Welcome to this awesome app</string>
    <string name="signup_your_email">Type your Email</string>
    <string name="signup_your_password">Type Your Password</string>
    <string name="repeat_your_password">Repeat Your Password</string>
    <string name="sign_up">Sign Up</string>
    <string name="one_ecg_lead_service">One ECG Lead Service</string>
    <string name="three_ecg_lead_service">THREE ECG Lead Service</string>
    <string name="twelve_ecg_lead_service">TWELVE ECG Lead Service</string>
    <string name="real_time_service">REAL-TIME SERVICE</string>
</resources>